[gd_scene load_steps=3 format=2]

[ext_resource path="res://actors/ShootingAI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="ShootingAI" type="Node2D"]
script = ExtResource( 1 )

[node name="TartgetDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TartgetDetectionArea"]
position = Vector2( 200, 0 )
shape = SubResource( 1 )

[node name="DebugInfoText" type="RichTextLabel" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="TartgetDetectionArea" to="." method="_on_TartgetDetectionArea_body_entered"]
[connection signal="body_exited" from="TartgetDetectionArea" to="." method="_on_TartgetDetectionArea_body_exited"]
